Update CourseControllerTest.java